# infinite-usb-creator

./: App.tsx  Cargo.toml  LICENSE  Landing.tsx  README.md  build.yml  index.css  index.html  metadata.json  package-lock.json  package.json  server.ts  tauri.conf.json
.github/workflows/: build.yml
src-tauri/: tauri.conf.json
src/pages/: Dashboard.tsx
src/services/: themeService.ts
