[package]
name = "infinite-usb"
version = "1.0.0"
description = "Infinite USB Flasher"
authors = ["Infinite Hardware Labs"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-all", "system-tray"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
